--- a/scss/style.scss
+++ b/scss/style.scss
@@ -835,21 +835,29 @@ width: 50%;
     background-color:#E0E0E0;
     margin: 12px 5px ;
     line-height: 1.5;
+    position: relative;
   
     @include mq(sp){
         width: 100%;
         margin:0px 20px 12px 5px;
+        height: 1.5em;
             }
 
-    input[type="text"] { width: 20.8em;
-                           font-family: $sans; }
-    input[type="textarea"] { width: 21em; 
-                                height: calc( 1.5em * 6 );
+    .text{  position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%;
+        font-family: $sans; }
+
+    .textarea{    position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%; 
+                                height: 100%;
                                 line-height: 1.5;
                                 font-family: $sans;
-
-
-                                
+       
                            }
 }
 
